# mbscripts

./: .editorconfig  .gitignore  .prettierrc.yml  bun.lockb  hugo.toml  package-lock.json  package.json  postcss.config.mjs  pyproject.toml  tailwind.config.js
.helix/: languages.toml
assets/css/: formControls.css  tailwind.css
assets/js/: pagefind.ts  search.js
content/: about.md  search.md
content/transcripts/interludes/: _index.md  the-dead-woman-of-brownies-creek.html
content/transcripts/season-1/: _index.md  chapter-1.html  chapter-10.html  chapter-2.html  chapter-3.html  chapter-4.html  chapter-5.html  chapter-6.html  chapter-7.html  chapter-8.html  chapter-9.html
content/transcripts/season-2/: _index.md  chapter-11.html  chapter-12.html  chapter-13.html  chapter-14.html  (+6 more)
converter/: pyproject.toml
converter/mb_script_convert/: __main__.py  feeds_cache.py  feeds_cache_test.py  hugo_html.py  hugo_html_test.py  import_midnight_burger.py  main.py  main_test.py  normalisations.py  pdf_utils.py  scrape_rss.py  scrape_rss_test.py  transcript.py  transcript_test.py  transcript_utils.py  transcript_utils_test.py
converter/mb_script_convert/__snapshots__/: hugo_html_test.ambr  transcript_test.ambr
converter/mb_script_convert/feeds_cache/: __init__.py  cache.py  cache_test.py
layouts/: baseof.html  index.html
layouts/_default/: baseof.html  index.html  list.html
layouts/_partials/: GetCover.html  css.html  footer.html  header.html  transcript-list.html  transcript-navigation.html
layouts/page/: search.html
layouts/partials/: css.html  footer.html  goatcounter.html  header.html  transcript-list.html  transcript-navigation.html
layouts/search/: page.html
layouts/transcripts/: single.html
mb_script_convert/: __main__.py  feeds_cache.py  hugo_html.py  hugo_html_test.py  import_midnight_burger.py  normalisations.py  pdf_utils.py  scrape_rss.py  transcript.py  transcript_utils.py
mb_script_convert/__snapshots__/: hugo_html_test.ambr
scripts/: favicon.sh
(+82 files in other folders)
