[project]
name = "mb-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.11",
    "lxml>=5.3.0",
    "py-pdf-parser>=0.13.0",
    "rapidfuzz>=3.10.1",
    "titlecase>=2.4.1",
    "tomli-w>=1.1.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.9.4",
    "pillow>=11.0.0",
    "pytest>=8.3.4",
    "pyvoronoi>=1.1.5",
    "shapely>=2.0.6",
    "syrupy>=4.8.0",
]
