[project]
name = "mb-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adaptix>=3.0.0b11",
    "feedparser>=6.0.11",
    "lxml>=5.3.0",
    "py-pdf-parser>=0.13.0",
    "rapidfuzz>=3.10.1",
    "titlecase>=2.4.1",
    "tomli-w>=1.1.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.9.4",
    "pillow>=11.0.0",
    "pytest>=8.3.4",
    "pyvoronoi>=1.1.5",
    "shapely>=2.0.6",
    "syrupy>=4.8.0",
]

[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
preview = true
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # isort
    "I",
    # bugbear
    "B",
    # pydocstyle
    "D",
    # ruff specific rules
    "RUF",
    # refurb
    "FURB",
    # pylint
    "PL",
    # perflint
    "PERF",
    # builtins
    "A",
    # comprehensions
    "C4",
    # errmsg
    "EM",
    # logging-format
    "G",
    # pytest-style
    "PT",
    # simplify
    "SIM",
    # type-checking
    "TC",
    # unused-arguments
    "ARG",
    # naming
    "N",
]
ignore = [
    # line length should be handled by the formatter
    "E501",
    # this project doesn't need docstrings on everything
    "D1",
    # with the curly apostrophes everywhere this one gets in the way
    "RUF001",
    # prefer D211 over this
    "D203",
    # prefer D212 over this
    "D213",
    # prefer just PLR0913
    "PLR0917",
]
